--- a/style.css
+++ b/style.css
@@ -1,4 +1,131 @@
 body{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    overflow-x: hidden;
+}
+header{
+    display: block;
+    position: sticky;
+    width: 100%;
+    box-shadow: 2px black;
+    background-color: white;
+    padding: 20px;
+}
+.headertop{
+    display: flex;
+    justify-content: end;
+    gap: 20px;
+    border-bottom: 1px solid grey;
+    margin-left: 200px;
+    margin-right: 200px;
+}
+.headertop a{
+    color: grey;
+    font-size: 15px;
+}
+.headerbottom{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    margin-left: 200px;
+    margin-right: 200px;
+}
+.menu a{
+    color: black;
+    font-weight: bold;
+    font-size: 20px;
+    margin-left: 13px;
+    margin-right: 13px;
+}
+.menu a:hover{
+    animation-name: menuAnimation;
+    text-decoration: solid red;
+}
+img{
+    width: 10rem;
+}
+header a{
+    text-decoration: none;
+}
+.search{
+    width: 25px;
+}
+.button1{
+    padding: 15px;
+    text-align: center;
+    border: 2px solid red;
+    color: red;
+}
+.button1:hover{
+    border: 2px solid black;
+    color: black;
+    animation-name: changeColor1;
+    animation-duration: 1s;
+}
+.button2{
+    padding: 15px;
+    text-align: center;
+    border: 2px solid red;
     background-color: red;
     color: white;
+}
+.button2:hover{
+    animation-name: changeColor2;
+    animation-duration: 1s;
+}
+.socialSide{
+    display: block;
+    position: absolute;
+    width: 50px;
+    background-color: black;
+    padding-left: 5px;
+}
+.socialSide a img{
+    display: block;
+    width: 22px;
+    filter: invert();
+    padding-bottom: 10px;
+    padding-left: 10px;
+}
+.socialSide p{
+    color: white;
+    font-size: 10px;
+    text-align: center;
+}
+.socialLine{
+    width: 30px;
+    color: white;
+}
+@keyframes changeColor1 {
+    from {
+        border: 2px solid red;
+        color: red;
+    }
+  
+    to {
+        border: 2px solid black;
+        color: black;
+   }
+}
+@keyframes changeColor2 {
+    from {
+        border: 2px solid red;
+        background-color: red;
+        color: white;
+    }
+  
+    to {
+        border: 2px solid black;
+        background-color: black;
+        color: white;
+   }
+}
+@keyframes menuAnimation {
+    from {
+        text-decoration: none;
+    }
+  
+    to {
+        text-decoration: solid red;
+   }
 }
