--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Montserrat, Helvetica, sans-serif;
     margin: 0;
     overflow-x: hidden;
 }
