--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap%27');
+
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
     overflow-x: hidden;
 }
@@ -128,4 +130,76 @@ header a{
     to {
         text-decoration: solid red;
    }
+}
+
+.titulo1 .titulo {
+    font-size: 2.25em;
+    width: 100%;
+    margin-bottom: -1px;
+}
+
+.imagenes {
+    width: 100%;
+    height: 15em;
+}
+
+.transparencia {
+    width: 100%;
+    height: 15em;
+}
+
+.columna {
+    width: 30%;
+    padding-right: 4%;
+}
+
+section {
+    display: flex;
+}
+
+.xsize {
+    font-size: 0.875rem;
+}
+
+.subtitulo {
+    font-weight: 600;
+}
+
+.boton {
+    text-align: center;
+    color: #e20613;
+    border: 0.125rem solid #e20613;
+    width: 13em;
+    justify-content: center;
+    margin: auto;
+    height: 3em;
+}
+
+.botonrojo {
+    color: white;
+    background-color: #e20613;
+    text-align: center;
+    border: 0.125rem solid #e20613;
+    margin: left;
+    justify-content: center;
+    width: 40%;
+}
+
+.campañas {
+    width: 80%;
+    padding-left: 10%;
+    margin: auto;
+}
+
+.barra {
+    border-bottom: 5px solid red;
+    margin-bottom: 40px;
+    width: 100px;
+}
+
+.leerMas {
+    color: red;
+}
+a{
+    text-decoration: none;
 }
