--- a/style.css
+++ b/style.css
@@ -1,131 +1,95 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    overflow-x: hidden;
-}
-header{
-    display: block;
-    position: sticky;
+<!--body{margin: 0;}-->
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap%27');
+.div-banner1{
+    background-repeat: no-repeat;
+    background-image: url(./img/BANNER\ VOLUNTARIOS.jpg);
+    background-size: cover;
+    height: 530px;
     width: 100%;
-    box-shadow: 2px black;
-    background-color: white;
-    padding: 20px;
 }
-.headertop{
-    display: flex;
-    justify-content: end;
-    gap: 20px;
-    border-bottom: 1px solid grey;
-    margin-left: 200px;
-    margin-right: 200px;
+.div-Cercadeti{
+    position: absolute;
+    color: white;
+    font-size: 40px;
+    font-family: Montserrat,"Helvetica Neue", Helvetica, Arial, sans-serif;
+    left: 140px;
+    top: 120px;
 }
-.headertop a{
-    color: grey;
-    font-size: 15px;
+.div-Atencion{
+    position: absolute;
+    color: white;
+    font-size: 25px;
+    font-family: Montserrat,"Helvetica Neue", Helvetica, Arial, sans-serif;
+    top: 300px;
+    left: 140px;
 }
-.headerbottom{
-    display: flex;
-    justify-content: space-between;
-    padding-top: 20px;
-    margin-left: 200px;
-    margin-right: 200px;
+.div-Teleasistencia{
+    position: absolute;
+    top: 380px;
+    left: 140px;
 }
-.menu a{
-    color: black;
-    font-weight: bold;
-    font-size: 20px;
-    margin-left: 13px;
-    margin-right: 13px;
-}
-.menu a:hover{
-    animation-name: menuAnimation;
-    text-decoration: solid red;
-}
-img{
-    width: 10rem;
-}
-header a{
+.a-banner1{
+    background-color: #e20613;
+    border: #e20613;
+    padding: 10px;
+    color: white;
     text-decoration: none;
 }
-.search{
-    width: 25px;
+.a-banner2{
+    background-color: transparent;
+    border: 2px solid white;
+    padding: 10px;
+    color: blue;
+    text-decoration: none;
 }
-.button1{
-    padding: 15px;
-    text-align: center;
-    border: 2px solid red;
-    color: red;
-}
-.button1:hover{
-    border: 2px solid black;
-    color: black;
-    animation-name: changeColor1;
-    animation-duration: 1s;
-}
-.button2{
-    padding: 15px;
-    text-align: center;
-    border: 2px solid red;
-    background-color: red;
-    color: white;
-}
-.button2:hover{
-    animation-name: changeColor2;
-    animation-duration: 1s;
-}
-.socialSide{
-    display: block;
-    position: absolute;
-    width: 50px;
+.div-Teleasistencia a:hover{
     background-color: black;
-    padding-left: 5px;
 }
-.socialSide a img{
-    display: block;
-    width: 22px;
-    filter: invert();
-    padding-bottom: 10px;
-    padding-left: 10px;
+.solicita-info{
+    position: relative;
+    left: 43%;
+    top: 79%;
 }
-.socialSide p{
-    color: white;
-    font-size: 10px;
-    text-align: center;
+.solicita-info a:hover{
+    background-color: black;
 }
-.socialLine{
-    width: 30px;
-    color: white;
+.titulos{
+    border-bottom: 5px solid red;
+    margin-bottom: 40px;
+    width: 100px;
 }
-@keyframes changeColor1 {
-    from {
-        border: 2px solid red;
-        color: red;
-    }
-  
-    to {
-        border: 2px solid black;
-        color: black;
-   }
+.div-body{
+    height:782px;
+    width:1014px;
+    display: flex;
+    font-family: Montserrat,"Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-@keyframes changeColor2 {
-    from {
-        border: 2px solid red;
-        background-color: red;
-        color: white;
-    }
-  
-    to {
-        border: 2px solid black;
-        background-color: black;
-        color: white;
-   }
+.video{
+    flex-direction: column;
+    left: 20%;
+    width: auto;
+    height: 756px;
+    margin: 0 15% 0;
 }
-@keyframes menuAnimation {
-    from {
-        text-decoration: none;
-    }
-  
-    to {
-        text-decoration: solid red;
-   }
+.twitter{
+    font-family: Montserrat,"Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.div-atencion-logos{
+    margin: 0 153px 0;
+    font-family: Montserrat,"Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.logos-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.logos-container div{
+    height: 288px;
+    width: 247px;
+}
+.div-banner2{
+    background-repeat: no-repeat;
+    background-image: url(./img/Banners-Web_v5_imv.jpg);
+    background-size: cover;
+    height: 530px;
+    width: 100%;
 }
