--- a/style.css
+++ b/style.css
@@ -7,11 +7,13 @@ body{
 }
 header{
     display: block;
-    position: sticky;
+    position: fixed;
     width: 100%;
     box-shadow: 2px black;
     background-color: white;
     padding: 20px;
+    top: 0;
+    z-index: 999;
 }
 .headertop{
     display: flex;
@@ -77,7 +79,7 @@ header a{
 }
 .socialSide{
     display: block;
-    position: absolute;
+    position: fixed;
     width: 50px;
     top: 200px;
     background-color: black;
@@ -132,7 +134,6 @@ header a{
         text-decoration: solid red;
    }
 }
-
 .titulo1 .titulo {
     font-size: 2.25em;
     width: 100%;
@@ -309,6 +310,7 @@ a{
     height: 500px;
     display: flex;
     flex-wrap: wrap;
+    margin-top: 150px;    
 }
 
 .textoimagen {
