--- a/style.css
+++ b/style.css
@@ -496,3 +496,26 @@ footer ul{
     display: flex;
     flex-wrap: wrap;
 }
+.contenidoImagen2 {
+    position: relative;
+    color: white;
+    font-size: 1.5em;
+    top: 50%;
+    left: 15%;
+}
+.textoImagen2 {
+    font-weight:bold;
+}
+.botonImg2 {
+    background-color: red;
+    border: 2px solid red;
+    text-align: center;
+    padding: 15px;
+    color: white;
+    font-size: 20px;
+    width: 12em;
+}
+.botonImg2:hover{
+    animation-name: changeColor;
+    animation-duration: 1s;
+}
