--- a/style.css
+++ b/style.css
@@ -447,6 +447,14 @@ footer h1 {
     padding-right: 320px;
     text-align: left;
     background-color: rgb(238, 236, 236);
+    width: 25%;
+}
+.div2 img{
+    width: 20px;
+}
+.section2{
+    text-align: center;
+    padding: 30px;
 }
 .RRSS {
     padding-top: 80%;
