Cambios de Torri

--- a/style.css
+++ b/style.css
@@ -302,6 +302,13 @@ a{
     height: 170px;
     width: 1150px;
     margin: 0 153px 0;
+    margin-top: 100px;
+}
+.UE div a img{
+    width: 350px;
+}
+.UE .UE3 img{
+    width: 350px;
 }
 .UE1{
     left: 5%;
