--- a/style.css
+++ b/style.css
@@ -302,7 +302,8 @@ a{
     height: 170px;
     width: 1150px;
     margin: 0 153px 0;
-    margin-top: 100px;
+    margin-top: 50px;
+    margin-bottom: 20px;
 }
 .UE div a img{
     width: 350px;
