--- a/style.css
+++ b/style.css
@@ -593,3 +593,29 @@ footer ul{
 main{
     margin-top: 150px;
 }
+
+.que-hacemos2{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 100px;
+}
+.column{
+    display: block;
+    width: 33%;
+    text-indent: 5px;
+}
+.que-hacemos2 img{
+    width: 300px;
+    height: 150px;
+}
+.read{
+    color: red;
+}
+.que-hacemos2 p{
+    text-align: left;
+    padding-left: 5px;
+    padding-right: 33%;
+}
+.a{
+    padding-left: 5px;
+}
