--- a/style.css
+++ b/style.css
@@ -447,10 +447,11 @@ footer section {
 footer section img{
     width: 30px;
 }
-footer .imagen {
+footer .imagen img{
     padding-left: 3%;
     padding-top: 3%;
-    margin-right: 40px;            
+    margin-right: 40px;
+    width: 10rem;            
 }
 
 footer section p {
