--- a/style.css
+++ b/style.css
@@ -27,6 +27,15 @@ header{
     color: grey;
     font-size: 15px;
 }
+.headertop img{
+    width: 18px;
+    margin-right: 5px;
+}
+.lineHeaderTop{
+    display: flex; 
+    align-items: center;
+    margin-bottom: 10px;
+}
 .headerbottom{
     display: flex;
     justify-content: space-between;
@@ -177,6 +186,12 @@ section {
     height: 3em;
 }
 
+.boton:hover {
+    color: black;
+    border: 0.125rem solid black;
+    animation: changeColor1 1s;
+}
+
 .botonrojo {
     color: white;
     background-color: #e20613;
@@ -185,6 +200,12 @@ section {
     margin: left;
     justify-content: center;
     width: 40%;
+}
+
+.botonrojo:hover {
+    background-color: black;
+    border: 0.125rem solid black;
+    animation: changeColor2 1s;
 }
 
 .campañas {
