--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*PRIMERA ENYTREGA*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap%27');
 
 body{
@@ -640,3 +641,12 @@ main{
 .a{
     padding-left: 5px;
 }
+
+/*SEGUNDA ENTREGA - NO BORRAR COMENTARIOS - RELLENAR SOLO EN VUESTRO ESPACIO*/
+/*PARTE DE JAVIER*/
+/*PARTE DE ALBERTO G*/
+/*PARTE DE ALBERTO C*/
+/*PARTE DE ARIEL*/
+/*PARTE DE DAVID*/
+/*PARTE DE MOHAMED*/
+/*PARTE DE VICTOR*/
