--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*PRIMERA ENYTREGA*/
+/*PRIMERA ENTREGA*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap%27');
 
 body{
@@ -21,8 +21,8 @@ header{
     justify-content: end;
     gap: 20px;
     border-bottom: 1px solid grey;
-    margin-left: 200px;
-    margin-right: 200px;
+    margin-left: 12%;
+    margin-right: 12%;
 }
 .headertop a{
     color: grey;
@@ -41,8 +41,8 @@ header{
     display: flex;
     justify-content: space-between;
     padding-top: 20px;
-    margin-left: 200px;
-    margin-right: 200px;
+    margin-left: 12%;
+    margin-right: 12%;
 }
 .menu a{
     color: black;
@@ -646,7 +646,6 @@ main{
 /*PARTE DE JAVIER*/
 .form1{
     background-color: rgb(241, 241, 241);
-    height: 500px;
     padding-top: 50px;
 }
 .formColum1{
@@ -664,7 +663,7 @@ main{
     margin-bottom: 1px;
 }
 .formColum1 div{
-    width: 30%;
+    width: 400px;
     margin-bottom: 20px;
 }
 .formColum1 div label{
@@ -691,7 +690,7 @@ main{
     text-align: center;
 }
 .formColum2 div{
-    width: 50%;
+    width: 500px;
     margin-bottom: 20px;
 }
 .formColum2{
@@ -716,7 +715,7 @@ main{
     background-color: #e20613;
     text-align: center;
     border: 0.125rem solid #e20613;
-    margin: left;
+    margin-bottom: 30px;
     justify-content: center;
     width: 300px;
     height: 40px;
