--- a/style.css
+++ b/style.css
@@ -728,6 +728,113 @@ main{
 }
 /*PARTE DE ALBERTO G*/
 /*PARTE DE ALBERTO C*/
+.formularioglobal {
+    background-color: rgb(241, 241, 241);
+    height: auto;
+    padding-top: 50px;
+}
+
+.formulario {
+
+    text-align: center;
+    width: 70%;
+    margin: auto;
+}
+
+.espacio1 {
+    display: flex;
+    margin-left: 200px;
+    margin-right: 10px;
+    flex-wrap: wrap;
+}
+.espacio1 input{
+    height: 40px;
+    margin-right: 30px;
+    font-size: 1rem;
+    width: auto;
+}
+.espacio1 select{
+    height: 40px;
+    margin-right: 30px;
+    font-size: 1rem;
+    width: auto;
+}
+.espacio2 input{
+    height: 40px;
+    margin-right: 30px;
+    font-size: 1rem;
+    width: auto;
+}
+.espacio2 select{
+    height: 40px;
+    margin-right: 30px;
+    font-size: 1rem;
+    width: auto;
+}
+.espacio2 {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 400px;
+}
+@media (max-width: 850px) {
+    .espacio2 {
+        margin-left: 200px;
+    }
+}
+
+.campo {
+    display: flex;
+    flex-direction: column;
+    width: 33%;
+    margin-bottom: 30px;
+    margin-right: 3px;
+}
+
+.enviarboton input {
+    margin: auto;
+    color: white;
+    background-color: #e20613;
+    text-align: center;
+    border: 0.125rem solid #e20613;
+    width: 70px;
+    height: 30px;
+    margin-bottom: 15px;
+}
+.enviarboton input:hover {
+    background-color: black;
+    border: 0.125rem solid black;
+    animation: changeColor2 1s;
+}
+
+label {
+    color: black;
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 1.2rem;
+    line-height: 1.5625rem;
+    font-weight: normal;
+    text-align: left;
+}
+
+span {
+    color: red;
+}
+
+@media (max-width: 850px) {
+    .campo {
+        width: 100%;
+        margin-right: 0;
+    }
+}
+
+.number {
+    text-align: center;
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 1.25rem;
+    font-weight: 600;
+    line-height: 1.875rem;
+    color: #e20613;
+    margin-bottom: 0.625rem;
+}
 /*PARTE DE ARIEL*/
 .bodyFormacion{
     margin: 0 200px 0;
