--- a/style.css
+++ b/style.css
@@ -875,5 +875,62 @@ span {
     animation: changeColor2 1s;
 }
 /*PARTE DE DAVID*/
+.form1{
+    background-color: rgb(241, 241, 241);
+    padding-top: 50px;
+    padding-bottom: 50px;;
+}
+.formColum1{
+    display: flex;
+    margin-left: 200px;
+    margin-right: 10px;
+    flex-wrap: wrap;
+}
+
+.hazte-socio h3{
+    font-weight: bolder;
+    font-size: 40px;
+    margin-bottom: 1px;
+}
+.formColum1 div{
+    width: 400px;
+    margin-bottom: 20px;
+}
+.formColum1 div label{
+    font-weight: bold;
+}
+.formColum1 div input{
+    width: 300px;
+    height: 40px;
+    background-color: white;
+}
+.formColum1 div input:active{
+    border-color: blue;
+}
+.formColum1 div select{
+    width: 300px;
+    height: 40px;
+    background-color: white;
+}
+.acent{
+    color: red;
+}
+.generalForm1{
+    display: block;
+    text-align: center;
+}
+.tituloForm{
+    font-size: 1.5em;
+    width: 100%;
+    margin-left: 200px;
+}
+.center{
+    margin-left: 400px;
+}
+@media (max-width: 1050px){
+    .center{
+    margin-left: 0px;
+}
+}
 /*PARTE DE MOHAMED*/
 /*PARTE DE VICTOR*/
